# Lyft-Divvy-Customer-Ride-Analysis

./: README.md  pyproject.toml
divvy_trips/: dbt_project.yml  packages.yml
divvy_trips/analyses/: casual_count_by_month.sql  casual_count_weekday.sql  casual_week_and_hour_count.sql  duration_distribution.sql  member_casual_count.sql  member_casual_count_by_day_of_week.sql  member_casual_count_by_holidays.sql  member_casual_count_by_holidays_2.sql  member_casual_count_by_month.sql  member_casual_duration.sql  member_casual_duration_by_day_of_week.sql  member_casual_duration_by_hour.sql  member_casual_duration_by_month.sql  member_casual_duration_less_than_5min_count.sql  member_casual_duration_more_than_1hr_count.sql  member_casual_duration_summary.sql  member_casual_holidays_duration.sql  member_casual_long_ride_count.sql  member_casual_rideable_count.sql  member_casual_rideable_holidays_count.sql  member_casual_rideable_small_duration_count.sql  member_casual_very_long_rides_holidays.sql  member_count_by_month.sql  member_count_weekday.sql  member_week_and_hour_count.sql  top_10_end_location_casual_member.sql  top_10_start_location_casual_member.sql
divvy_trips/models/: sources.yml  test.sql
divvy_trips/seeds/: US_Holidays_2024.csv  station_information.csv
divvy_trips/utils/: __init__.py  get_all_analyses_name.py  get_model_data.py  get_model_name.py  load_dotenv.py
divvy_trips/visualizations/: casual_count_by_month.py  casual_count_weekday.py  casual_week_and_hour_count.py  member_casual_count.py  member_casual_duration.py  member_count_by_month.py  (+2 more)
(+52 files in other folders)
